# para-dars

./: .gitignore  CMakeLists.txt  cleanBuild.bat  vcpkg.json
assets/models/Crate/: Crate1.mtl
assets/scenes/: TestScene.json
include/para-dars/core/: AssetManager.h  FileDialogManager.h  InputManager.h  LogManager.h
include/para-dars/ecs/: ComponentFactory.h  EntityManager.h  Scene.h  Serialisable.h  System.h
include/para-dars/ecs/components/: CameraComponent.h  HierarchyComponent.h  ModelComponent.h  NameComponent.h  RenderComponent.h  TransformComponent.h
include/para-dars/ecs/systems/: HierarchySystem.h  RenderSystem.h
include/para-dars/editor/: Editor.h  ImGuiCommitInput.h  Panel.h
include/para-dars/editor/panels/: HierarchyPanel.h  InspectorPanel.h  LogPanel.h  ViewportPanel.h
include/para-dars/graphics/: Framebuffer.h  FullscreenQuad.h  Material.h  Mesh.h  Model.h  Shader.h
src/: main.cpp
src/core/: AssetManager.cpp  FileDialogManager.cpp  InputManager.cpp  LogManager.cpp
src/ecs/: ComponentFactory.cpp  EntityManager.cpp  Scene.cpp  System.cpp
src/ecs/systems/: HierarchySystem.cpp  RenderSystem.cpp
src/editor/: Editor.cpp  Panel.cpp
src/editor/panels/: HierarchyPanel.cpp  InspectorPanel.cpp  LogPanel.cpp  ViewportPanel.cpp
src/graphics/: Framebuffer.cpp  FullscreenQuad.cpp  Mesh.cpp  Model.cpp  Shader.cpp
src/graphics/shaders/: idEncoding.frag  mask.vert  model.frag  model.vert  outline.frag  outline.vert
